--- a/src/main/resources/CenterScene.fxml
+++ b/src/main/resources/CenterScene.fxml
@@ -23,7 +23,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8">
+<VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8"
+      fx:controller="me.toxz.exp.dac.fx.CenterSceneController"
+>
     <children>
         <MenuBar VBox.vgrow="NEVER">
             <menus>
@@ -78,6 +80,34 @@
                                 <Color blue="0.624" green="0.624" red="0.624" fx:id="x2"/>
                             </textFill>
                         </Label>
+                        <TreeView fx:id="treeView" layoutX="11.0" layoutY="83.0" prefHeight="200.0" prefWidth="200.0">
+                            <TreeItem expanded="true" value="DAC">
+                                <children>
+                                    <TreeItem expanded="true" value="Subject" fx:id="subjectTreeItem">
+                                    </TreeItem>
+                                    <TreeItem expanded="false" value="Object" fx:id="objectTreeItem">
+                                        <children>
+                                            <TreeItem value="1"></TreeItem>
+                                            <TreeItem value="1"></TreeItem>
+                                            <TreeItem value="1"></TreeItem>
+                                            <TreeItem value="1"></TreeItem>
+                                            <TreeItem value="1"></TreeItem>
+                                            <TreeItem value="1"></TreeItem>
+                                        </children>
+                                    </TreeItem>
+                                    <TreeItem expanded="false" value="Access" fx:id="accessTreeItem">
+                                        <children>
+                                            <TreeItem value="1"></TreeItem>
+                                            <TreeItem value="1"></TreeItem>
+                                            <TreeItem value="1"></TreeItem>
+                                            <TreeItem value="1"></TreeItem>
+                                            <TreeItem value="1"></TreeItem>
+                                            <TreeItem value="1"></TreeItem>
+                                        </children>
+                                    </TreeItem>
+                                </children>
+                            </TreeItem>
+                        </TreeView>
                     </children>
                 </AnchorPane>
                 <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
