--- a/src/main/resources/CenterScene.fxml
+++ b/src/main/resources/CenterScene.fxml
@@ -24,8 +24,7 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 <VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8"
-      fx:controller="me.toxz.exp.dac.fx.CenterSceneController"
->
+      fx:controller="me.toxz.exp.dac.fx.CenterSceneController">
     <children>
         <MenuBar VBox.vgrow="NEVER">
             <menus>
@@ -69,41 +68,30 @@
         <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="true" prefHeight="-1.0"
                    prefWidth="-1.0" VBox.vgrow="ALWAYS">
             <items>
-                <AnchorPane>
-                    <children>
-                        <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" minWidth="60.0" prefWidth="-1.0"
-                               style="&#10;" text="Master" textAlignment="CENTER" wrapText="false">
-                            <font>
-                                <Font size="18.0" fx:id="x1"/>
-                            </font>
-                            <textFill>
-                                <Color blue="0.624" green="0.624" red="0.624" fx:id="x2"/>
-                            </textFill>
-                        </Label>
-                        <TreeView fx:id="treeView" layoutX="11.0" layoutY="83.0" prefHeight="200.0" prefWidth="200.0">
-                            <TreeItem expanded="true" value="DAC">
-                                <children>
-                                    <TreeItem expanded="true" value="Subject" fx:id="subjectTreeItem"/>
-                                    <TreeItem expanded="false" value="Object" fx:id="objectTreeItem"/>
-                                </children>
-                            </TreeItem>
-                        </TreeView>
-                    </children>
-                </AnchorPane>
+                <TreeView fx:id="treeView">
+                    <root>
+                        <TreeItem expanded="true" value="DAC">
+                            <children>
+                                <TreeItem fx:id="subjectTreeItem" expanded="true" value="Subject"/>
+                                <TreeItem fx:id="objectTreeItem" expanded="false" value="Object"/>
+                            </children>
+                        </TreeItem>
+                    </root>
+                </TreeView>
                 <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
                     <content>
                         <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="430.0">
                             <children>
-                                <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;"
-                                       text="View" textAlignment="CENTER" textFill="$x2" wrapText="false"/>
+                                <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" style="&#10;" text="View0"
+                                       textAlignment="CENTER" wrapText="false"/>
                             </children>
                         </AnchorPane>
                     </content>
                 </ScrollPane>
                 <AnchorPane>
                     <children>
-                        <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Details"
-                               textAlignment="CENTER" textFill="$x2" wrapText="false"/>
+                        <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" style="&#10;" text="Details"
+                               textAlignment="CENTER" wrapText="false"/>
                     </children>
                 </AnchorPane>
             </items>
