--- a/src/main/resources/CenterScene.fxml
+++ b/src/main/resources/CenterScene.fxml
@@ -78,14 +78,17 @@
                         </TreeItem>
                     </root>
                 </TreeView>
-                <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
+                <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="-1.0" prefWidth="-1.0">
                     <content>
-                        <AnchorPane id="Content" minHeight="-1.0" minWidth="-1.0" prefHeight="545.0" prefWidth="430.0">
-                            <children>
-                                <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" style="&#10;" text="View0"
-                                       textAlignment="CENTER" wrapText="false"/>
-                            </children>
-                        </AnchorPane>
+                        <TableView>
+                            <columns>
+                                <TableColumn prefWidth="75.0" text="Subject"/>
+                                <TableColumn prefWidth="75.0" text="Object"/>
+                            </columns>
+                            <columnResizePolicy>
+                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                            </columnResizePolicy>
+                        </TableView>
                     </content>
                 </ScrollPane>
                 <AnchorPane>
