--- a/src/main/resources/CenterScene.fxml
+++ b/src/main/resources/CenterScene.fxml
@@ -19,6 +19,7 @@
   -->
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.Color?>
@@ -80,10 +81,18 @@
                 </TreeView>
                 <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="-1.0" prefWidth="-1.0">
                     <content>
-                        <TableView>
+                        <TableView fx:id="tableView">
                             <columns>
-                                <TableColumn prefWidth="75.0" text="Subject"/>
-                                <TableColumn prefWidth="75.0" text="Object"/>
+                                <TableColumn prefWidth="75.0" text="Subject" fx:id="subjectColumn">
+                                    <cellValueFactory>
+                                        <PropertyValueFactory property="username"/>
+                                    </cellValueFactory>
+                                </TableColumn>
+                                <TableColumn prefWidth="75.0" text="Object">
+                                    <cellValueFactory>
+                                        <PropertyValueFactory property="objectPath"/>
+                                    </cellValueFactory>
+                                </TableColumn>
                             </columns>
                             <columnResizePolicy>
                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
