--- a/src/main/resources/login.fxml
+++ b/src/main/resources/login.fxml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!--
   ~     Copyright (C) 2016 Carlos
   ~
@@ -17,13 +18,13 @@
   ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
   -->
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml" id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity"
             minHeight="-Infinity"
-            minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" styleClass="background"
-            fx:controller="me.toxz.exp.dac.fx.LoginController">
+            minWidth="-Infinity" prefHeight="540.0" prefWidth="500.0" styleClass="background"
+            xmlns="http://javafx.com/javafx/8" fx:controller="me.toxz.exp.dac.fx.LoginController">
     <children>
         <AnchorPane id="anchorPane2" prefHeight="300.0" prefWidth="500.0" styleClass="top-segment"
                     AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
@@ -41,26 +42,23 @@
                                 <Label id="label1" layoutX="14.0" layoutY="139.0" text="Password"/>
                                 <PasswordField id="passwordField1" fx:id="password" layoutY="157.0" prefWidth="415.0"
                                                AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0"/>
-                                <ImageView id="app-login-logo" layoutY="-12.0">
-                                    <!--<image>-->
-                                    <!--<Image url="@/ensemble/samples/shared-resources/fxmldemoImages/LoginLogo.png"-->
-                                    <!--preserveRatio="true" smooth="true"/>-->
-                                    <!--</image>-->
-                                </ImageView>
                             </children>
                         </AnchorPane>
+                        <Label id="label2" fx:id="errorMessage"/>
                     </children>
                 </VBox>
             </children>
         </AnchorPane>
-        <Button id="button1" fx:id="login" defaultButton="true" onAction="#processLogin" prefHeight="70.0"
-                prefWidth="400.0" text="Login" AnchorPane.bottomAnchor="66.0" AnchorPane.leftAnchor="40.0"
+        <Button id="button1" fx:id="login" defaultButton="true" onAction="#processLogin" prefHeight="40.0"
+                prefWidth="400.0" text="Sign in" AnchorPane.bottomAnchor="66.0" AnchorPane.leftAnchor="40.0"
                 AnchorPane.rightAnchor="40.0"/>
-        <HBox id="hBox1" alignment="CENTER" prefHeight="25.0" prefWidth="418.0" AnchorPane.bottomAnchor="156.0"
-              AnchorPane.leftAnchor="41.0" AnchorPane.rightAnchor="41.0">
-            <children>
-                <Label id="label2" fx:id="errorMessage"/>
-            </children>
-        </HBox>
+        <Button id="button1" fx:id="login1" defaultButton="true" layoutX="40.0" layoutY="446.0"
+                onAction="#processSignUp"
+                prefHeight="40.0" prefWidth="420.0" text="Sign up"
+                AnchorPane.bottomAnchor="16.0" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="40.0"
+        />
     </children>
+    <padding>
+        <Insets top="36.0"/>
+    </padding>
 </AnchorPane>
