--- a/dac/src/main/resources/CenterScene.fxml
+++ b/dac/src/main/resources/CenterScene.fxml
@@ -32,8 +32,9 @@
                 <Menu mnemonicParsing="true" text="File">
                     <items>
                         <MenuItem mnemonicParsing="true" onAction="#onCreateObject" text="New Object"/>
+                        <MenuItem mnemonicParsing="true" onAction="#onSignOut" text="Sign Out"/>
                         <SeparatorMenuItem mnemonicParsing="false"/>
-                        <MenuItem mnemonicParsing="true" text="Quit"/>
+                        <MenuItem mnemonicParsing="true" onAction="#onQuit" text="Quit"/>
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edit">
